# madhacks2025

./: README.md
backend/: .gitignore  claude.py  claudestreamtest.py  db.py  index.html  index_record.html  index_streaming_BROKEN.html  llm.py  main.py  old_main.py  pyproject.toml  redis_queue.py  sst.py  test.py  tts.py  worker.py
backend/redis/: README.md  docker-compose.yml
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CompanySelection.jsx  TopicSelection.jsx  TypingEffect.jsx  VoiceSelection.jsx
frontend/src/pages/: InterviewOverlay.jsx  Settings.jsx  Summary.jsx
